[package]
name = "stevia_bitblaster"
version = "0.1.0" # remember to update html_root_url
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"
description = "Bitblasting techniques, data structures and routines."

repository = "https://github.com/robbepop/stevia"
# documentation = "https://docs.rs/stevia"
# homepage =

keywords   = ["smt", "solver", "formal methods"]
categories = ["data-structures"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "stevia_bitblaster"

[dependencies]
stevia_ast = { version = "0.1.0", path = "../ast" }

[badges]
travis-ci = { repository = "Robbepop/stevia" }
appveyor = { repository = "Robbepop/stevia", branch = "master", service = "github" }
