[package]
name = "stevia_simplifier"
version = "0.1.0" # remember to update html_root_url
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"
description = "Expression tree data structures for the stevia SMT solver."

repository = "https://github.com/robbepop/stevia"
# documentation = "https://docs.rs/stevia"
# homepage =

keywords   = ["smt", "solver", "formal methods"]
categories = ["data-structures"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "stevia_simplifier"

[dependencies]
apint = "0.2"
itertools = "0.7"
either = "1.5"
log = "0.4"
stevia_ast = { version = "0.1", path = "../ast" }
stevia_bitvec = { version = "0.1", path = "../bitvec" }

[badges]
travis-ci = { repository = "Robbepop/stevia" }
appveyor = { repository = "Robbepop/stevia", branch = "master", service = "github" }
