[package]
name = "stevia_ast"
version = "0.1.0" # remember to update html_root_url
authors = ["Robbepop <robbepop@web.de>"]
edition = "2018"

license = "MIT/Apache-2.0"
readme = "README.md"
description = "Expression tree data structures for the stevia SMT solver."

repository = "https://github.com/robbepop/stevia"
# documentation = "https://docs.rs/stevia"
# homepage =

keywords   = ["smt", "solver", "formal methods"]
categories = ["science"]
exclude    = [ "benches/*" ]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "stevia_ast"

[dependencies]
apint = "0.2"
smallvec = "0.6"
string-interner = "0.7"
vec_map = "0.8"
log = "0.4"
indoc = "0.2"

[badges]
travis-ci = { repository = "Robbepop/stevia" }
appveyor = { repository = "Robbepop/stevia", branch = "master", service = "github" }
