[package]
name = "stevia_utils"
version = "0.1.0" # remember to update html_root_url
authors = ["Robbepop <robbepop@web.de>"]

license = "MIT/Apache-2.0"
readme = "README.md"
description = "Utilities and convenience functionality for stevia core."

repository = "https://github.com/robbepop/stevia"
# documentation = "https://docs.rs/stevia"
# homepage =

keywords   = ["smt", "solver", "formal methods"]
categories = ["data-structures"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "stevia_utils"

[dependencies]
indoc = "0.2"
stevia_ast = { version = "0.1.0", path = "../stevia_ast" }

[badges]
travis-ci = { repository = "Robbepop/stevia" }
appveyor = { repository = "Robbepop/stevia", branch = "master", service = "github" }
