[package]
name = "stevia_ast_benches"
version = "0.1.0" # remember to update html_root_url
authors = ["Robin Freyler <robbepop@web.de>"]

license = "MIT/Apache-2.0"
readme = "README.md"
description = "Benchmarks for the Stevia AST data structures."

repository = "https://github.com/robbepop/stevia"
# documentation = "https://docs.rs/stevia"
# homepage =

keywords   = ["smt", "solver", "formal methods"]
categories = ["science"]

include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[lib]
name = "stevia_ast_benches"

[profile.bench]
debug = true

[dependencies]
stevia_ast = { path = "../" }
